# tesseract

./: .clang-format  .clangd  .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  FEATURES.md  LICENSE  NEXT.md  PACKAGING.md  PACKAGING.md.in  README.md  ROADMAP.md  STATUS.md  STYLE.md  THIRD-PARTY-LICENSES  TODO.md
client/: CMakeLists.txt
client/include/matrix/: client.hpp  event_handler.hpp  event_handler_bridge.hpp  types.hpp
client/include/tesseract/: account_session.h  autolink.h  avatar_disk_cache.h  call_session.h  client.h  client.hpp  emoji.h  event_handler.h  event_handler.hpp  event_handler_bridge.h  event_handler_bridge.hpp  highlight.h  image_pack.h  maps_link.h  markdown.h  media_source.h  mentions.h  notifier.h  paths.h  prefs.h  screen_lock.h  secret_store.h  session_store.h  settings.h  tray_icon.h  types.h  types.hpp  up_connector.h  version.h.in  visual.h  waveform_cache.h
client/src/: CallSession.cpp  autolink.cpp  avatar_disk_cache.cpp  client.cpp  emoji.cpp  emoji_aliases.inc  emoji_data.gen.py  emoji_data.inc  event_handler_bridge.cpp  ffi_convert.h  ffi_convert.hpp  highlight.cpp  html_util.h  json_util.h  maps_link.cpp  markdown.cpp  media_source.cpp  mentions.cpp  paths.cpp  prefs.cpp  secret_store_linux.cpp  secret_store_macos.cpp  secret_store_stub.cpp  secret_store_windows.cpp  session_persist_queue.cpp  session_persist_queue.h  session_store.cpp  settings.cpp  waveform_cache.cpp
sdk/: Cargo.toml  build.rs
sdk/src/: bridge.rs  client.rs  highlight.rs  html_sanitize.rs  image_packs.rs  lib.rs  maps_link.rs  markdown.rs  matrix_uri.rs  media_preview.rs  oauth.rs  password_login.rs  recent_emoji.rs  text_utils.rs  waveform.rs  waveform_store.rs
sdk/src/client/: account.rs  backfill.rs  crypto_reset.rs  gif.rs  image_packs.rs  legacy_login_ffi.rs  maps.rs  media.rs  media_gate.rs  media_queue.rs  mod.rs  notifications.rs  pins.rs  profile_fields.rs  qr_grant.rs  recovery.rs  room_list.rs  rtc_ffi.rs  search.rs  send.rs  session.rs  sync.rs  tags.rs  thread.rs  timeline.rs  timeline_convert.rs  update.rs  verification.rs
tests/: CMakeLists.txt
tests/cpp/: test_account_manager.cpp  test_anim_image_cache.cpp  test_avatar_disk_cache.cpp  test_client_recent.cpp  test_code_highlight.cpp  test_compose_bar_media.cpp  test_emoji.cpp  test_encryption_setup_overlay.cpp  test_event_handler_bridge.cpp  test_find_existing_dm.cpp  test_gif_engine.cpp  test_html_spans.cpp  test_i18n.cpp  test_image_pack_order.cpp  test_image_pack_shortcode_suggest.cpp  test_location_events.cpp  test_map_tiles.cpp  test_maps_link.cpp  test_markdown.cpp  test_media_disk_cache.cpp  test_media_drop.cpp  test_media_preview_policy.cpp  test_mention_engine.cpp  test_mentions.cpp  test_message_list_membership.cpp  test_message_list_pinning.cpp  test_paths.cpp  test_pending_send.cpp  test_picker_image_cache.cpp  test_pixmap_cache.cpp  test_prefs.cpp  test_presence_tracker.cpp  test_room_list_autoscroll.cpp  test_room_list_preview_emoji.cpp  test_room_list_sections.cpp  test_room_settings_diff.cpp  test_room_switch_gate.cpp  test_roomlist_unread.cpp  test_server_info.cpp  test_session_persist_queue.cpp  (+89 more)
ui/linux-gtk/: CMakeLists.txt
ui/linux-gtk/src/: CallWindow.cpp  CallWindow.h  GtkSniTrayIcon.cpp  GtkSniTrayIcon.h  LinuxGtkTrayIcon.cpp  LinuxGtkTrayIcon.h  LinuxNotifier.cpp  LinuxNotifier.h  LinuxScreenLockGtk.cpp  LinuxScreenLockGtk.h  LinuxUpConnectorGtk.cpp  LinuxUpConnectorGtk.h  LoginDialog.cpp  LoginDialog.h  LoginView.cpp  LoginView.h  MainWindow.cpp  MainWindow.h  RecoveryDialog.cpp  RecoveryDialog.h  RoomWindow.cpp  RoomWindow.h  SettingsWidget.cpp  SettingsWidget.h  gettext_shorthand.h  main.cpp
ui/linux-gtk/tk/: audio_capture_gtk.cpp  canvas_cairo.cpp  canvas_cairo.h  host_gtk.cpp  host_gtk.h  video_gtk.cpp
ui/linux-qt/: CMakeLists.txt
ui/linux-qt/src/: CallWindow.cpp  CallWindow.h  EmojiPicker.cpp  EmojiPicker.h  InflightDotWidget.cpp  InflightDotWidget.h  JoinRoomDialog.cpp  JoinRoomDialog.h  LinuxNotifier.cpp  LinuxNotifier.h  LinuxQtTrayIcon.cpp  LinuxQtTrayIcon.h  LinuxScreenLockQt.cpp  LinuxScreenLockQt.h  LinuxUpConnectorQt.cpp  LinuxUpConnectorQt.h  LoginDialog.cpp  LoginDialog.h  LoginView.cpp  LoginView.h  MainWindow.cpp  MainWindow.h  RecoveryDialog.cpp  RecoveryDialog.h  RoomListDelegate.cpp  RoomListDelegate.h  RoomWindow.cpp  RoomWindow.h  SettingsWidget.cpp  SettingsWidget.h  StickerPicker.cpp  StickerPicker.h  main.cpp  xdg-activation-v1-protocol.c  xdg-activation-v1-protocol.h
ui/linux-qt/tk/: audio_capture_qt.cpp  canvas_qpainter.cpp  canvas_qpainter.h  host_qt.cpp  host_qt.h
ui/macos/: CMakeLists.txt  Info.plist.in
ui/macos/src/: AppDelegate.h  AppDelegate.mm  AvatarCache.h  AvatarCache.mm  CallWindowController.h  CallWindowController.mm  ComposeBar.h  ComposeBar.mm  EmojiPicker.h  EmojiPicker.mm  EventBridge.h  EventBridge.mm  LoginView.h  LoginView.mm  LoginWindowController.h  LoginWindowController.mm  MacOSTrayIcon.h  MacOSTrayIcon.mm  MacScreenLock.h  MacScreenLock.mm  MainViewController.h  MainViewController.mm  MainWindowController.h  MainWindowController.mm  MessageListController.h  MessageListController.mm  RecoveryWindowController.h  RecoveryWindowController.mm  RoomListController.h  RoomListController.mm  RoomWindowController.h  RoomWindowController.mm  StickerPicker.h  StickerPicker.mm  main.mm  tk_locale.h  util.h
ui/macos/tk/: audio_capture_macos.mm  audio_playback_macos.mm  canvas_cg.cpp  canvas_cg.h  host_macos.h  host_macos.mm  location_provider_macos.mm  screen_capture_macos.mm  video_capture_macos.mm
ui/shared/: CMakeLists.txt  linux_portal.h  screen_lock_state.h
ui/shared/app/: AccountManager.cpp  AccountManager.h  CallWindowBase.cpp  CallWindowBase.h  EventHandlerBase.cpp  EventHandlerBase.h  GithubUpdateChecker.cpp  GithubUpdateChecker.h  PresenceTracker.cpp  PresenceTracker.h  RoomWindowBase.cpp  RoomWindowBase.h  SettingsController.cpp  SettingsController.h  ShellBase.cpp  ShellBase.h  SlashCommands.cpp  (+8 more)
ui/windows/: CMakeLists.txt  Tesseract.manifest  Tesseract.rc.in
(+440 files in other folders)
